--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,49 @@
-# Compiled class file
+# Maven specific
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# Build output
+build/
+out/
+bin/
 *.class
 
-# Log file
+# IDE specific files
+.idea/
+*.iml
+*.iws
+*.ipr
+.classpath
+.project
+.settings/
+.vscode/
+*.swp
+*.swo
+
+# Minecraft/Fabric dev environment
+run/
+.gradle/
+*.launch
+
+# OS specific files
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# Logs
+logs/
 *.log
+Console Errors/
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Temporary files
+*~
+*.bak
+*.tmp 
