--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
         run: mvn -B clean package
         
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: noconsolespam-jar
           path: target/noconsolespam-*.jar
@@ -60,10 +60,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -78,18 +78,18 @@ jobs:
         
       - name: Generate changelog
         id: changelog
-        uses: metcalfc/changelog-generator@v4.1.0
+        uses: metcalfc/changelog-generator@v1.0.0
         with:
           myToken: ${{ secrets.GITHUB_TOKEN }}
         
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
+        uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: NoConsoleSpam ${{ steps.get_version.outputs.VERSION }}
+          name: NoConsoleSpam ${{ steps.get_version.outputs.VERSION }}
           body: |
             # NoConsoleSpam ${{ steps.get_version.outputs.VERSION }}
             
@@ -103,21 +103,7 @@ jobs:
             For more details, see the [README](https://github.com/${{ github.repository }}/blob/main/README.md)
           draft: false
           prerelease: false
-          
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./target/noconsolespam-${{ steps.get_version.outputs.VERSION }}.jar
-          asset_name: noconsolespam-${{ steps.get_version.outputs.VERSION }}.jar
-          asset_content_type: application/java-archive
-          
-      - name: Update VERSIONS.md
-        run: |
-          echo "Updating VERSIONS.md is handled by a separate workflow"
+          files: ./target/noconsolespam-${{ steps.get_version.outputs.VERSION }}.jar
           
   update-versions:
     name: Update Versions Document
@@ -126,10 +112,10 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
