--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
         
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -44,11 +44,19 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package
         
+      - name: Store JAR artifact
+        run: |
+          mkdir -p ./artifacts
+          cp target/noconsolespam-*.jar ./artifacts/
+          
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v2
+        # Use a simple approach that doesn't rely on external actions
+        uses: actions/upload-artifact@v2.3.1
         with:
           name: noconsolespam-jar
-          path: target/noconsolespam-*.jar
+          path: ./artifacts/*.jar
+          if-no-files-found: error
+          retention-days: 7
           
       - name: Run tests
         run: mvn -B test
@@ -63,7 +71,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
@@ -76,34 +84,31 @@ jobs:
         id: get_version
         run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_OUTPUT
         
-      - name: Generate changelog
-        id: changelog
-        uses: metcalfc/changelog-generator@v1.0.0
+      - name: Download artifacts from build job
+        uses: actions/download-artifact@v2
         with:
-          myToken: ${{ secrets.GITHUB_TOKEN }}
+          name: noconsolespam-jar
+          path: ./artifacts
         
-      - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          name: NoConsoleSpam ${{ steps.get_version.outputs.VERSION }}
-          body: |
-            # NoConsoleSpam ${{ steps.get_version.outputs.VERSION }}
+      - name: Create GitHub Release
+        run: |
+          VERSION=${{ steps.get_version.outputs.VERSION }}
+          ARTIFACT_PATH="./artifacts/noconsolespam-${VERSION}.jar"
+          
+          # Create release using GitHub CLI
+          gh release create "v${VERSION}" \
+            --title "NoConsoleSpam ${VERSION}" \
+            --notes "## NoConsoleSpam ${VERSION} Release
             
-            ${{ steps.changelog.outputs.changelog }}
-            
-            ## Installation
+            ### Installation
             1. Install [Fabric Loader](https://fabricmc.net/use/) for Minecraft 1.20.1
             2. Download the JAR file
             3. Place it in your Minecraft mods folder
             
-            For more details, see the [README](https://github.com/${{ github.repository }}/blob/main/README.md)
-          draft: false
-          prerelease: false
-          files: ./target/noconsolespam-${{ steps.get_version.outputs.VERSION }}.jar
+            For more details, see the [README](https://github.com/${{ github.repository }}/blob/main/README.md)" \
+            "${ARTIFACT_PATH}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
   update-versions:
     name: Update Versions Document
@@ -115,7 +120,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
