--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,9 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-release:
-    name: Build, Test and Release
+  setup:
+    name: Repository Setup
     runs-on: ubuntu-latest
-    
     steps:
       - name: Manual repository checkout
         run: |
@@ -52,7 +51,36 @@ jobs:
           # Verify installation
           java -version
           javac -version
-          
+      
+      - name: Extract version from pom.xml
+        id: version
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
+      
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+  build:
+    name: Build Project
+    needs: setup
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository checkout
+        uses: actions/checkout@v3
+      
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      
       - name: Build with Maven
         run: |
           echo "Building project with Maven"
@@ -66,18 +94,68 @@ jobs:
           
           echo "Build directory contents:"
           ls -la target/
-          
+      
       - name: Extract version from pom.xml
         id: version
         run: |
           VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Extracted version: $VERSION"
-          
+      
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/
+          retention-days: 1
+
+  test:
+    name: Run Tests
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository checkout
+        uses: actions/checkout@v3
+      
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      
       - name: Run tests
         run: |
           echo "Running tests"
           mvn -B test
+
+  prepare-artifacts:
+    name: Prepare Release Artifacts
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository checkout
+        uses: actions/checkout@v3
+      
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/
+      
+      - name: Extract version from pom.xml
+        id: version
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
       
       - name: Prepare release artifacts
         run: |
@@ -86,7 +164,7 @@ jobs:
           mkdir -p artifacts
           
           # Find exact JAR file
-          ARTIFACT_NAME="noconsolespam-$VERSION.jar"
+          ARTIFACT_NAME="noconsolespam-${{ steps.version.outputs.version }}.jar"
           ARTIFACT_PATH="target/$ARTIFACT_NAME"
           
           if [ ! -f "$ARTIFACT_PATH" ]; then
@@ -100,21 +178,48 @@ jobs:
           echo "Copying $ARTIFACT_PATH to artifacts/$ARTIFACT_NAME"
           cp -v "$ARTIFACT_PATH" "artifacts/$ARTIFACT_NAME"
           
-          # Save artifact name for use in later steps
-          echo "ARTIFACT_NAME=$ARTIFACT_NAME" >> $GITHUB_ENV
-          
           echo "Artifacts directory contents:"
           ls -la artifacts/
           
           # Create artifact archive
           echo "Creating artifact archive"
           tar -czvf artifacts/noconsolespam-build.tar.gz artifacts/$ARTIFACT_NAME
+          
+          # Save artifact name for later reference
+          echo "artifact_name=$ARTIFACT_NAME" >> $GITHUB_OUTPUT
       
-      # Create release if it's a tag
-      - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/v')
+      - name: Upload release artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-artifacts
+          path: artifacts/
+          retention-days: 1
+
+  create-release:
+    name: Create GitHub Release
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: prepare-artifacts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository checkout
+        uses: actions/checkout@v3
+      
+      - name: Download release artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: release-artifacts
+          path: artifacts/
+      
+      - name: Extract version from pom.xml
+        id: version
         run: |
-          echo "Creating GitHub release for version $VERSION"
+          VERSION=$(echo ${{ github.ref_name }} | sed 's/^v//')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
+      
+      - name: Create GitHub Release
+        run: |
+          echo "Creating GitHub release for version ${{ steps.version.outputs.version }}"
           
           # Install GitHub CLI
           type -p curl >/dev/null || sudo apt install curl -y
@@ -127,8 +232,11 @@ jobs:
           # Authenticate with GitHub CLI
           echo "${{ github.token }}" | gh auth login --with-token
           
-          # Verify artifact exists
+          # Find artifact
+          ARTIFACT_NAME="noconsolespam-${{ steps.version.outputs.version }}.jar"
           ARTIFACT_PATH="artifacts/$ARTIFACT_NAME"
+          
+          # Verify artifact exists
           if [ ! -f "$ARTIFACT_PATH" ]; then
             echo "ERROR: JAR file not found at: $ARTIFACT_PATH"
             echo "Contents of artifacts directory:"
@@ -138,7 +246,7 @@ jobs:
           
           # Create release notes
           cat > release_notes.md << EOF
-          ## NoConsoleSpam $VERSION Release
+          ## NoConsoleSpam ${{ steps.version.outputs.version }} Release
           
           ### Installation
           1. Install [Fabric Loader](https://fabricmc.net/use/) for Minecraft 1.20.1
@@ -150,22 +258,36 @@ jobs:
           
           # Create the release
           echo "Creating release with artifact: $ARTIFACT_PATH"
-          gh release create "v$VERSION" \
-            --title "NoConsoleSpam $VERSION" \
+          gh release create "${{ github.ref_name }}" \
+            --title "NoConsoleSpam ${{ steps.version.outputs.version }}" \
             --notes-file release_notes.md \
             "$ARTIFACT_PATH"
+
+  update-docs:
+    name: Update Documentation
+    if: startsWith(github.ref, 'refs/tags/v')
+    needs: create-release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository checkout
+        uses: actions/checkout@v3
       
-      # Update VERSIONS.md if it's a tag
-      - name: Update VERSIONS Documentation
-        if: startsWith(github.ref, 'refs/tags/v')
+      - name: Extract version from tag
+        id: version
         run: |
-          echo "Updating VERSIONS.md for $VERSION"
+          VERSION=$(echo ${{ github.ref_name }} | sed 's/^v//')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Extracted version: $VERSION"
+      
+      - name: Update VERSIONS Documentation
+        run: |
+          echo "Updating VERSIONS.md for ${{ steps.version.outputs.version }}"
           
           # Get current date
           DATE=$(date +"%Y-%m-%d")
           
           # Prepare new version entry
-          NEW_ENTRY="## [$VERSION](https://github.com/${{ github.repository }}/releases/tag/v$VERSION) - $DATE\n\n- [Download JAR](https://github.com/${{ github.repository }}/releases/download/v$VERSION/noconsolespam-$VERSION.jar)\n- [View Changes](https://github.com/${{ github.repository }}/blob/main/CHANGES.md#$(echo $VERSION | sed 's/\\./-/g'))\n"
+          NEW_ENTRY="## [${{ steps.version.outputs.version }}](https://github.com/${{ github.repository }}/releases/tag/${{ github.ref_name }}) - $DATE\n\n- [Download JAR](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/noconsolespam-${{ steps.version.outputs.version }}.jar)\n- [View Changes](https://github.com/${{ github.repository }}/blob/main/CHANGES.md#$(echo ${{ steps.version.outputs.version }} | sed 's/\\./-/g'))\n"
           
           # If VERSIONS.md doesn't exist, create it
           if [ ! -f VERSIONS.md ]; then
@@ -181,15 +303,34 @@ jobs:
           
           # Commit the changes
           git add VERSIONS.md
-          git commit -m "Update VERSIONS.md for $VERSION" || echo "No changes to commit"
+          git commit -m "Update VERSIONS.md for ${{ steps.version.outputs.version }}" || echo "No changes to commit"
           
           # Push using token authentication
           git remote set-url origin https://x-access-token:${{ github.token }}@github.com/${{ github.repository }}.git
           git push origin HEAD:${GITHUB_REF#refs/heads/}
+
+  debug-info:
+    name: Debug Information
+    if: always()
+    needs: [setup, build, test, prepare-artifacts]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Repository checkout
+        uses: actions/checkout@v3
+      
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: target/
           
-      # For debugging - save information about workspace contents
+      - name: Download release artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: release-artifacts
+          path: artifacts/
+          
       - name: Debug information
-        if: always()
         run: |
           echo "=== Debug Information ==="
           echo "Current directory: $(pwd)"
@@ -203,5 +344,4 @@ jobs:
           ls -la artifacts/ || echo "No artifacts directory found"
           
           echo "Environment variables:"
-          echo "VERSION: $VERSION"
-          echo "ARTIFACT_NAME: $ARTIFACT_NAME 
+          echo "VERSION: $(mvn help:evaluate -Dexpression=project.version -q -DforceStdout || echo 'N/A')" 
