--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
     <groupId>eu.prismm</groupId>
     <artifactId>noconsolespam</artifactId>
-    <version>1.4.1</version>
+    <version>1.4.2</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <minecraft.version>1.21.5</minecraft.version>
+        <minecraft.version>24w20a</minecraft.version>
         <fabric.version>0.15.11</fabric.version>
-        <mappings>1.21.5+build.1</mappings>
+        <mappings>24w20a+build.1</mappings>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <loom.version>1.6.12</loom.version>
     </properties>
